囫囵吞枣,完成了作业,后面有空就继续完善